--- a/grading.ini
+++ b/grading.ini
@@ -5,11 +5,18 @@ path = /Users/harodfinvh/PycharmProjects/class1/q1
 [GRADING]
 ;mode = 0: 忽略输出数据整型浮点型，适用于只考虑输出数据是否与样例相符的算法题
 ;mode = 1: 区分输出数据整型浮点型，适用于精度要求的算法题
-;mode = 2: 输出必须与样例完全匹配，适用于字符串类型的算法题
+;mode = 2: 输出必须与样例完全匹配，适用于字符串类型或对输出格式有严格要求的算法题
 mode = 0
 ;is_sort = True: 对作业输出数据进行排序，适用于只考虑输出结果不考虑输出顺序的算法题（默认）
 ;is_sort = False: 不对作业输出数据进行排序，适用于要求对数据进行排序的算法题
 is_sort = False
+;默认：
+;    用例测试结果 60%
+;    克隆代码结果 20%
+;    代码风格结果 20%
+res_rate = 0.6
+none_clone_rate = 0.2
+style_rate = 0.2
 
 [CLONE]
 ;克隆代码 vector 生成窗口扫描的 Token 数量
@@ -24,4 +31,9 @@ similarity = 1
 distance = 0 0.70711 1.58114 2.236
 ;文本相似度
 diff = 0.83
+;克隆结果是否算入总成绩
+is_score = True
 
+[REMOVE]
+;是否删除所有无关文件
+is_remove = False
