--- a/grading.ini
+++ b/grading.ini
@@ -1,6 +1,7 @@
 [PATH]
 ;待评分作业路径
-path = /Users/harodfinvh/PycharmProjects/class1/q1
+;单文件批改或inspection
+sole_path = /Users/harodfinvh/PycharmProjects/class1/week1/q3
 
 [GRADING]
 ;mode = 0: 忽略输出数据整型浮点型，适用于只考虑输出数据是否与样例相符的算法题
@@ -9,7 +10,7 @@ path = /Users/harodfinvh/PycharmProjects/class1/q1
 mode = 0
 ;is_sort = True: 对作业输出数据进行排序，适用于只考虑输出结果不考虑输出顺序的算法题（默认）
 ;is_sort = False: 不对作业输出数据进行排序，适用于要求对数据进行排序的算法题
-is_sort = False
+is_sort = True
 ;默认：
 ;    用例测试结果 60%
 ;    克隆代码结果 20%
@@ -17,10 +18,12 @@ is_sort = False
 res_rate = 0.6
 none_clone_rate = 0.2
 style_rate = 0.2
+;是否将测试结果与样例结果取交集获得单测试用例分数
+is_intersect =True
 
 [CLONE]
 ;克隆代码 vector 生成窗口扫描的 Token 数量
-;一般设为一列 int
+;支持多值，一般设为一列 int
 minTokens = 30
 ;克隆代码 vecotr 扫描步长
 ;一般设为一列int
@@ -33,7 +36,27 @@ distance = 0 0.70711 1.58114 2.236
 diff = 0.83
 ;克隆结果是否算入总成绩
 is_score = True
+;是否使用diff来降低克隆识别率
+is_diff = False
 
 [REMOVE]
-;是否删除所有无关文件
-is_remove = False
+;是否删除所有与最终结果无关的中间文件（ast生成树、克隆检测生成向量、中间测试文件等）
+is_remove = True
+
+[MULT]
+;多文件同时批改（路径不含空格）
+;   0：单文件批改
+;   1：多文件批改并汇总
+;   2：多文件汇总（不批改; 适用于单独批改文件最后进行汇总）: 只适用于为9位学号开头的多文件 如：171830549_在线文本_1.py 171830549_在线文本_2.py 171830549_在线文本_3.py
+sole_or_mult = 2
+mult_path = /Users/harodfinvh/PycharmProjects/class1/week1/q1 /Users/harodfinvh/PycharmProjects/class1/week1/q2 /Users/harodfinvh/PycharmProjects/class1/week1/q3
+mult_score_path = /Users/harodfinvh/PycharmProjects/class1/week1
+
+;保持所有变量与文件数相同
+mult_mode = 0 0 0
+mult_is_sort = True False True
+mult_is_intersect = True False True
+mult_is_diff = False False False
+    ;只支持单值minTokens
+mult_minTokens = 30 30 30
+mult_is_score = True True True
